# wbtgbot

./: .gitignore  1.xlsx  2.xlsx  3.xlsx  7.xlsx  9.xlsx  README.md  alembic.ini  buybotInsta.py  callbacks.py  constants.py  docker-compose.yml  dockerfile  handlers.py  init.sql  logger.py  main1.py  main10.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  modules.py  my.cnf  pyproject.toml  requirements.txt  run.py  run_migrations.py  takeData.py
exceltables/: 10.xlsx  4.xlsx  5.xlsx  6.xlsx  8.xlsx
mainfiles/: main1.py  main10.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py
parser1/: buybotInsta.py  compare.py  connect_csv_mysql.py  droptables.py  start_main.sh  stop_main.sh
parser10/: buybotInsta.py  compare.py  connect_csv_mysql.py  start_main.sh  stop_main.sh
parser2/: buybotInsta.py  compare.py  connect_csv_mysql.py  droptables.py  product_first_parser.py  product_second_parser.py  start_main.sh  stop_main.sh
parser3/: buybotInsta.py  connect_csv_mysql.py  droptables.py  product_first_parser.py  start_main.sh  stop_main.sh  takeData.py
parser4/: buybotInsta.py  connect_csv_mysql.py  droptables.py  product_second_parser.py  start_main.sh  stop_main.sh
parser5/: buybotInsta.py  compare.py  connect_csv_mysql.py  droptables.py  start_main.sh  stop_main.sh
parser6/: buybotInsta.py  compare.py  connect_csv_mysql.py  duplicateParsTable.py  product_first_parser.py  product_second_parser.py  start_main.sh  stop_main.sh
parser7/: add_new_product_if_not_exists.py  buybotInsta.py  (+3 more)
(+104 files in other folders)
